# instagram_self_posting_bot

./: .env  .gitignore  README.md  main.py  setup.cfg
bot/: config.ini  main.py
bot/modules/: sanitize_media.py
modules/: media_type.py
