[metadata]
name = RedditToInstagramBot
version = 0.0.1
author = Zabaniya001
description = Reposts meme from Reddit to Instagram
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Zabaniya001/reddit-posts_to_instagram-posts

[options]
packages = find:

install_requires =
    instagrapi
    praw
    Pillow